v4, DATE_UNKNOWN -- Fourth release.

- Added argparse as a requirement for systems without argparse installed
- Relaxed pika version requirements
- Added python 2.6 support
- PEP8 Formatting

v3, 2012-11-24 -- Third release.

- Changed lpush to rpush on redis transport
- Added udp support
- Updated timestamp in ISO 8601 format with the "Z" suffix to express UTC
- Zeromq installation is now optional
- Removed redundant README.txt
- Added classifiers to package
- Added example supervisor config file
- Added example bash startup file

v2, 2012-10-25 -- Second release.

- Updated documentation
- Added support for `config.ini` based option parsing
- Refactored transports into separate files
- Added support for file globbing in paths
- Added msgpack and regular string output
- Force UTC time when ingesting logs
- Refactored logging to use the Python Logging Framework
- Added RabbitMQ support

v1, 2012-08-05 -- Initial release.